Code ready for star review

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-
   <body>
+    <!-- Coment for see files changed -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1 id="title">HEADING 1</h1>
     <p id="description">This is my p element</p>
